examples/test/testpolicy16622.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16622
  namespace: namespace188
spec:
  podSelector:
    matchLabels:
      key18: value1
      key35: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value47
          key17: value33
          key36: value39
      podSelector:
        matchLabels:
          key4: value37
          key22: value10
